fixing the content overflow problem with the (fixed) navbar
Fixed it by switching to a static navbar.  It scrolls away with the page,
but the rest of the content flows under it properly on smaller devices when
the nav bar wraps to be bigger.

--- a/webroot/css/wcsdsignon.css
+++ b/webroot/css/wcsdsignon.css
@@ -1,6 +1,3 @@
-body {
-  padding-top: 50px;
-}
 .mainpage {
   padding: 40px 15px;
   text-align: center;
